--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # 🗄️ Base de données
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=your_secure_password_here
+DB_PASS=
 DB_NAME=gospelchantetparole
 DB_NAME_TEST=gospelchantetparole_test
 
