--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "serveur/server.js",
   "scripts": {
     "start": "node serveur/server.js",
+    "build": "echo 'Build completed'",
     "dev": "nodemon serveur/server.js",
+    "init-postgres": "node serveur/scripts/init-postgres.js",
+    "check-deployment": "node check-deployment.js",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll --detectOpenHandles",
     "test:coverage": "cross-env NODE_ENV=test jest --coverage --detectOpenHandles --forceExit"
@@ -37,6 +40,8 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.0",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
