--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon serveur/server.js",
     "init-postgres": "node serveur/scripts/init-postgres.js",
     "test-postgres": "node test-postgres-connection.js",
+    "validate-db": "node validate-database-config.js",
     "check-deployment": "node check-deployment.js",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll --detectOpenHandles",
