mise à jour avec postgresSQL et bug et configuration et ajout des tables

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "echo 'Build completed'",
     "dev": "nodemon serveur/server.js",
     "init-postgres": "node serveur/scripts/init-postgres.js",
+    "fix-database": "node serveur/scripts/fix-database-sync.js",
     "test-postgres": "node test-postgres-connection.js",
     "validate-db": "node validate-database-config.js",
     "check-deployment": "node check-deployment.js",
