Intégration du logo Gospel et améliorations complètes - Logo logoGospel.PNG intégré dans tous les composants - Page Paramètres avec 6 onglets complets - API d'administration avec monitoring temps réel - Documentation Swagger protégée par authentification - Déconnexion améliorée avec appel backend - Favicon mis à jour avec le logo Gospel - Cahier des charges complet généré

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "node serveur/server.js",
     "build": "cd admin && npm install && npm run build",
     "dev": "nodemon serveur/server.js",
+    "deploy": "node deploy.js",
     "init-postgres": "node serveur/scripts/init-postgres.js",
     "fix-database": "node serveur/scripts/fix-database-sync.js",
     "test-postgres": "node test-postgres-connection.js",
